--- a/CHANGES
+++ b/CHANGES
@@ -34,6 +34,8 @@ TODO:
   - path module:
     - reverse needs to be fixed
     - _lentopar return value should not contain total length
+    - fix lentopar 
+    - write split tests
   - data module:
     - data.data should add line number like data.datafile
     - use csv module (new in 2.3)
@@ -76,6 +78,9 @@ TODO:
     - lentopar returns tuple not list
     - added path.arclength_pt, path.at_pt, path.begin_pt, path.end_pt (and 
       correspondingly for normpath) (TODO: documentation)
+    - complete refactoring of the normpath class: normpaths now consist
+      of normsubpaths which themselves consist of normlines and normcurves
+      This is much more convenient for any routines working with normpaths.
   - connnector module:
     - renamed _xxx -> xxx_pt
   - deco module:
