--- a/CHANGES
+++ b/CHANGES
@@ -32,7 +32,6 @@ TODO:
   - mathtree module:
      - consider rewrite using the python compiler module
   - path module:
-    - reverse needs to be fixed
     - _lentopar return value should not contain total length
     - fix lentopar 
     - write split tests
@@ -81,6 +80,8 @@ TODO:
     - complete refactoring of the normpath class: normpaths now consist
       of normsubpaths which themselves consist of normlines and normcurves
       This is much more convenient for any routines working with normpaths.
+    - reversing of closed sub paths does not change the first point of the
+      sub path
   - connnector module:
     - renamed _xxx -> xxx_pt
   - deco module:
