textboxes in text
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1367 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -68,6 +68,7 @@ TODO:
   - text module:
     - default handling of texmessages as in the new attribute scheme
     - multiple insert bug fixed
+    - added textboxes that are sequentially filled (experimental)
   - examples:
     - mandel.py (contributed by Stephen Phillips)
   - path:
