corrected method name settexrunner
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1375 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/canvas.tex
+++ b/manual/canvas.tex
@@ -156,7 +156,7 @@ The \verb|canvas| class provides the following methods:
   Inserts \texttt{text} into the
   canvas (shortcut for
   \texttt{insert(texrunner.text(x, y, text, *args))}).\\
-  \texttt{texrunner(texrunner)} &
+  \texttt{settexrunner(texrunner)} &
   Sets the \texttt{texrunner}; default is \texttt{defaulttexrunner}
   from the \texttt{text} module.\\
     \texttt{writetofile(filename, 
