added curvecorners() decorator
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1379 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -89,6 +89,7 @@ TODO:
     - renamed _xxx -> xxx_pt
   - deco module:
     - wriggle decorator (TODO: documentation)
+    - curvecorners decorator (TODO: documentation)
   - canvas:
     - writeEPSfile deprecates writetofile
     - internally, write methods are renamed in outputPS
