--- a/CHANGES
+++ b/CHANGES
@@ -45,6 +45,7 @@ TODO:
     - SVG support
   - deco module:
     - arrows should not be stroked by default
+    - Think about names wriggle and curvecorners
   - style and color module:
     - support modification of existing styles via __call__
   - bbox module:
