--- a/CHANGES
+++ b/CHANGES
@@ -36,6 +36,7 @@ TODO:
     - _lentopar return value should not contain total length
     - should normpaths not allow for very short path elements?
       (currently, the closepath does prevent short paths at the end)
+    - arclength vs. lentopar (better: arclen and lentopar?)
   - data module:
     - data.data should add line number like data.datafile
     - use csv module (new in 2.3)
