renamed arclength -> arclen
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1417 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -88,6 +88,7 @@ TODO:
       This is much more convenient for any routines working with normpaths.
     - reversing of closed sub paths does not change the first point of the
       sub path
+    - arclength -> arclen
   - connnector module:
     - renamed _xxx -> xxx_pt
   - deco module:
