- add trafoat method - raise exception instead of returning None when parameter is out of range - here and back again: trafo.tangent returns again a path corresponding   to the tangent - t replaced by param in methods - cleanups here and there
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1424 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -92,6 +92,8 @@ TODO:
     - renamed: lentopar -> arclentoparam
     - normpath.tangent now returns tuple corresponding to direction and
       magnitude of tangent vector instead of normline
+    - path and normpath method raise exception instead of returning None
+      when parameter is out of range
   - connnector module:
     - renamed _xxx -> xxx_pt
   - deco module:
