- permit specification of epsilon only in normpath and normsubpath constructor   and no longer in path and normpath methods - normpathels shorter than epsilon are not included in normsubpath anymore
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1430 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -92,6 +92,9 @@ TODO:
     - renamed: lentopar -> arclentoparam
     - path and normpath method raise exception instead of returning None
       when parameter is out of range
+    - the accuracy epsilon can now only be specified in normpath and normsubpath
+      constructor and no longer in arguments of path and normpath methods
+      (TODO: documentation)
   - connnector module:
     - renamed _xxx -> xxx_pt
   - deco module:
