- negative parameters are no longer supported in path and normpath methods - path and normpath methods which accept parameter value param now   alternatively accept an arc length
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1445 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -98,6 +98,9 @@ TODO:
     - the accuracy epsilon can now only be specified in normpath and normsubpath
       constructor and no longer in arguments of path and normpath methods
       (TODO: documentation)
+    - negative parameters are no longer supported in path and normpath methods
+    - path and normpath methods which accept parameter value param now
+      alternatively accept an arc length
   - connnector module:
     - renamed _xxx -> xxx_pt
   - deco module:
