arrow heads are no longer stroked
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1456 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -107,6 +107,7 @@ TODO:
   - deco module:
     - wriggle decorator (TODO: documentation)
     - curvecorners decorator (TODO: documentation)
+    - arrow heads are no longer stroked (as suggested by Magnus Lie Hetland)
   - canvas:
     - writeEPSfile deprecates writetofile
     - internally, write methods are renamed in outputPS
